@@ -13,8 +13,15 @@ AC_DEFUN([GNOME_LIBGTOP_HOOK],
 	AC_SUBST(LIBGTOP_INCLUDEDIR)
 	AC_SUBST(LIBGTOP_LIBS)
 	AC_SUBST(LIBGTOP_INCS)
+	AC_SUBST(LIBGTOP_NAMES_LIBS)
+	AC_SUBST(LIBGTOP_NAMES_INCS)
 	AC_SUBST(LIBGTOP_GUILE_INCS)
 	AC_SUBST(LIBGTOP_GUILE_LIBS)
+	AC_SUBST(LIBGTOP_GUILE_NAMES_INCS)
+	AC_SUBST(LIBGTOP_GUILE_NAMES_LIBS)
+	AC_SUBST(LIBGTOP_MINOR_VERSION)
+	AC_SUBST(LIBGTOP_MAJOR_VERSION)
+	AC_SUBST(LIBGTOP_VERSION)
 	AC_SUBST(LIBGTOP_BINDIR)
 	AC_SUBST(LIBGTOP_SERVER)
 
