@@ -1,3 +1,14 @@
+1998-07-29  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-libgtop-check.m4: Added (AC_SUBST):
+	`LIBGTOP_NAMES_LIBS', `LIBGTOP_NAMES_INCS',
+	`LIBGTOP_GUILE_LIBS', `LIBGTOP_GUILE_NAMES_LIBS',
+	`LIBGTOP_MAJOR_VERSION', `LIBGTOP_MINOR_VERSION',
+	`LIBGTOP_VERSION'.
+
+	* gnome-libgtop-sysdeps.m4 (libgtop_sysdeps_dir):
+	Added `AC_SUBST(libgtop_sysdeps_dir)'.
+
 1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnome-support.m4: Check for functions that `error.c' looks for.
